# cats-test-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  setup.cfg
.github/workflows/: ci.yml
app/: main.py  settings.py
app/api/: api.py
app/api/endpoints/: cats.py  ping.py
app/crud/: cats.py
app/db/: base.py  base_class.py  session.py
app/models/: cats.py
app/schemas/: cats.py
tests/: test_ping.py
tests/api/endpoints/: test_cats.py
