[tool.poetry]
name = "cats-test-api"
version = "0.1.0"
description = ""
authors = ["emp7yhead <artyomkropp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
